new scraper for parsing goszakup and scheduler controller